--- a/client/index.html
+++ b/client/index.html
@@ -4,16 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="News and goings on from the world">
+	<script src="https://use.fontawesome.com/c909b5fb2a.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Inconsolata|Arima+Madurai" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>feeds</title>
 </head>
 <body>
 
-<main>
-	
-	<div id="feed-app-container"></div>
-
-</main>
+<div id="feed-app-container"></div>
 
 <!-- for dev, keep these uncommented if in prod -->
 <script type="text/javascript" src="../jspm_packages/system.js"></script>
